2007-04-12  Simon Goodall  <simon@worldforge.org>

	* libwfut/ChannelFileList.h: Added a clear method to clear the map.

2007-04-11  Simon Goodall  <simon@worldforge.org>

	* configure.ac, AUTHORS: Change contact email.

2007-03-22  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/WFUT.cpp, libwfut/WFUT.h: Added a new signal, UpdateReasons,
	  which is fired during the caclulateUpdates function. This feeds back
	  reasons why (or not) a file is updated to the client application.

	* libwfut/platform.cpp: Fixed the permissions set for executable files.

	* tools/wfut.cpp: Added callback for UpdateReason

2007-03-17  Simon Goodall  <libwfut@simongoodall.co.uk>

	* configure.ac: Bump version numbers.

	* Release version 0.1.0

2007-03-04  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/IO.cpp, libwfut/IO.h: Fix compiler warning. Added an
	  executable flag to DataStruct and to the queueFile function to set the
	  executable permissions of a file on sucessful download.

	* libwfut/platform.cpp: Fix error in os_set_executable.

	* libwftut/WFUT.cpp: Update to new queueFile signature.

2007-03-04  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/IO.cpp: Bug fix from Erik where where paths such as /home
	  would fail in the createParentDirs function.

	* libwfut/platform.cpp, libwfut/platform.h: Added functions to check for
	  file existance and setting world executable permissions.

	* tools/wfut.cpp: Display usage when no arguments are specified. Delete
	  the tempwfut.xml after the real wfut.xml file has been saved. Use
	  os_exists instead of the local file_exists function.

2007-02-20  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/IO.cpp: Added some more error checks.

	* tools/wfut.cpp: Updated some formatting and comments.

2007-02-20  Simon Goodall  <libwfut@simongoodall.co.uk>

	* tools/wfut.cpp: Added simple usage information.

2007-02-19  Simon Goodall  <libwfut@simongoodall.co.uk>
